# eclib

./: .gitignore  .hgignore  .travis.yml  AUTHORS  CITATION.cff  Makefile  Makefile.am  Makefile.dynamic  Makefile.in  NEWS  README  README.md  autogen.sh  configure  configure.ac  eclib.pc.in  how-to-profile.txt
binder/: environment.yml  postBuild  start  workspace.json
doc/: Makefile.am  g0n.txt  howto.txt  include_notes.txt  sage_packaging.txt
docs/: g0n.txt  howto.txt  mwrank.options  progs.txt
g0n/: Makefile  aplist.cc  bsdprocs.h  checkap.cc  checkdegphi.cc  checkmanin.cc  checknf.cc  curvesort.cc  cusp.cc  cusp.h  documentation.txt  ecnf.cc  ecnf.in  ecnf.out  fixc4.data  fixc6.cc  fixc6.h  fixforms.cc  g2.cc  getai.cc  getai.h  getoldeigs.cc  h1bsd.cc  h1bsdcurisog.cc  h1bsdcurisog.in  h1bsdcurisog.out  h1bsdcurisog_n.out  h1bsdcurisog_ntl.out  h1clist.cc  h1clist.in  h1curve.cc  h1degphi.cc  h1degphitex.cc  h1first.cc  h1first.in  h1first.out  h1newforms.h  hecketest.cc  hecketest.in  hecketest.out  (+57 more)
libsrc/: GetOpt.cc  GetOpt.h  Makefile.am  Makefile.in  arith.cc  arith.h  bigrat.h  bitspace.cc  bitspace.h  compproc.cc  conic.cc  convert.cc  cperiods.cc  cperiods.h  ct.cc  cubic.cc  cubic.h  curve.cc  curve.h  curvedata.cc  curvemod.cc  curvered.cc  curvesort.cc  cusp.cc  cusp.h  desc2.cc  desc2.h  descent.cc  descent.h  divpol.cc  egr.cc  egr.h  egros.cc  elog.cc  ffmod.cc  ffmod.h  field.cc  fixc6.cc  fixc6.data  fixc6.h  (+136 more)
libsrc/eclib/: GetOpt.h  arith.h  bigcomplex.h  bigrat.h  bitspace.h  compproc.h  conic.h  convert.h  cperiods.h  ct.h  cubic.h  curve.h  curvemod.h  curvesort.h  cusp.h  desc2.h  descent.h  divpol.h  egr.h  egros.h  elog.h  ffmod.h  field.h  fixc6.h  flinterface.h  frat.h  getcurve.h  gf.h  gpslave.h  hilbert.h  homspace.h  htconst.h  illl.h  int.h  interface.h  isogs.h  kbessel.h  lambda.h  legendre.h  linalg.h  (+70 more)
m4/: ax_boost_asio.m4  ax_boost_base.m4  ax_boost_system.m4  ax_boost_thread.m4  ax_cxx_compile_stdcxx_0x.m4  ax_cxx_header_tr1_unordered_map.m4  ax_cxx_header_unordered_map.m4
man/: Makefile.am  mwrank.1
procs/: ChangeLog  Makefile  arith.cc  arith.h  bigrat.h  bigrattest.cc  bigrattest.in  bigrattest.out  compproc.cc  compproc.h  comptest.cc  conic.h  cubic.cc  divisors.cc  echtest.cc  eco.cc  eco_appl.cc  env.cc  f.cc  fact.cc  factor.cc  gf.cc  gf.h  gpslave.cc  gpslave.h  hilbert.cc  hilbert.h  holzer.cc  illl.cc  interface.cc  interface.h  kbessel.cc  lcubic.cc  (+96 more)
progs/: Makefile.am  Makefile.in  aplist.cc  checkap.cc  cubics.cc  curvesort.cc  ecnf.cc  h1bsd.cc  h1bsdcurisog.cc  h1clist.cc  h1curve.cc  h1first.cc  indep_test.cc  list_cubics.cc  listnsp.cc  makensp.cc  moreap.cc  mwrank.cc  nfcount.cc  nfhpcurve.cc  nfhpcurve_prof.cc  nfhpmcurve.cc  pcurve.cc  point_search.cc  qexp.cc  quartic_points.cc  reduce_cubics.cc  reduce_quartics.cc  solve_conic.cc  solve_legendre.cc  t
progs/in/: aplist.in  cubics.in  ecnf.in  h1bsd.in  h1bsdcurisog.in  h1first.in  list_cubics.in  makensp.in  moreap.in  nfcount.in  nfhpcurve.in  pcurve.in  reduce_cubics.in
progs/out_no_ntl/: checkap.out  cubics.out  ecnf.out  h1bsd.out  h1bsdcurisog.out  h1curve.out  h1first.out  indep_test.out  list_cubics.out  listnsp.out  makensp.out  moreap.out  nfhpcurve.out  nfhpmcurve.out  pcurve.out  point_search.out  reduce_quartics.out
progs/out_ntl/: aplist.out  cubics.out  ecnf.out  h1bsd.out  h1bsdcurisog.out  h1curve.out  list_cubics.out  listnsp.out  makensp.out  moreap.out  mwrank.out  nfhpcurve.out  nfhpmcurve.out  pcurve.out  point_search.out  reduce_cubics.out
tests/: Makefile.am  Makefile.in  allisog.cc  aplist.cc  bigrattest.cc  checkap.cc  checkgens.cc  comptest.cc  conductor.cc  curvesort.cc  d2.cc  ecnf.cc  fieldtest.cc  findinf.cc  flint_test.cc  h1bsd.cc  h1bsdcurisog.cc  h1clist.cc  h1curve.cc  h1degphi.cc  h1first.cc  hecketest.cc  homtest.cc  hpcurve.cc  indep.cc  lcubic.cc  mattest.cc  mhcount.cc  mmattest.cc  modtest.cc  moreap.cc  mptest.cc  mspace.cc  mvectest.cc  mwrank.cc  newhecke.cc  nfcount.cc  nfhpcurve.cc  nfhpmcurve.cc  nftest.cc  (+48 more)
tests/in/: comptest.in  conductor.in  findinf.in  indep.in  mmattest.in  modtest.in  mptest.in  mvectest.in  mwrank.in  nfhpcurve.in  ratpoint.in  smattest.in  space1.in  tcon2.in  tconic.in  thilbert.in  thtconst.in  tilll.in  tmrank.in  tred.in  tsat2.in  twist.in
tests/in_no_ntl/: allgens.268605  allisog.in  checkgens.in  comptest.in  d2.in  fieldtest.in  flint_test.in  homtest.in  mattest1.in  mattest2.in  mattest3.in  mptest.in  newhecke.in  ptest.in  rattest.in  space2.in  tbessel.in  tegr.in  tequiv.in  theight.in  tlegcert.in  tmanin.in  tmrank-long.in  tnfd.in  torsion.in  tp2points.in  tperiods.in  tsat.in  tsat3.in  tsatbnd.in
tests/in_ntl/: allgens.268605  allisog.in  bigrattest.in  comptest.in  d2.in  fieldtest.in  flint_test.in  mattest3.in  oftest.in  polredtest.in  svectest4.in  tate.in  theight.in  tmrank-short.in  torsion.in  tperiods.in  tsat.in  tsat3.in  tsatbnd.in  vectest1.in
tests/out_no_ntl/: allisog.out  bigrattest.out  checkgens.out  comptest.out  conductor.out  d2.out  fieldtest.out  flint_test.out  hecketest.out  homtest.out  mattest1.out  mattest2.out  mattest3.out  mattest4.out  modtest.out  mptest.out  mspace.out  mvectest.out  nftest.out  polredtest.out  ptest.out  smattest.out  smattest1.out  smattest3.out  space3.out  space4.out  svectest1.out  svectest2.out  svectest3.out  tate.out  tconvert.out  tegr.out  tegros.out  telog.out  theight.out  thilbert.out  thtconst.out  tilll.out  timing.out  tlatconst.out  (+15 more)
tests/out_ntl/: allisog.out  bigrattest.out  checkgens.out  comptest.out  d2.out  fieldtest.out  flint_test.out  hecketest.out  mattest1.out  mattest2.out  mattest3.out  mattest4.out  mhcount.out  mmattest.out  mptest.out  mspace.out  newhecke.out  nftest.out  polredtest.out  ptest.out  smattest1.out  smattest2.out  smattest3.out  smattest4.out  space1.out  space2.out  space3.out  space4.out  svectest3.out  svectest4.out  tbessel.out  tcon2.out  tcurve.out  tdivpol.out  telog.out  tequiv.out  theight.out  tlatconst.out  tlegcert.out  tmrank-short.out  (+16 more)
(+185 files in other folders)
